fix: Slack 메시지 필드값의 순서가 유지되지 않는 오류 해결
순서를 유지하려고 LinkedHashMap을 사용했었는데, Map.ofEntries는 순서가 보장되지 않았다..